--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 	<link rel="stylesheet" href="libs/slick-1.5.9/slick/slick.css" />
 	<link rel="stylesheet" href="libs/slick-1.5.9/slick/slick-theme.css" />
 	<link rel="stylesheet" href="css/fonts.css" />
-	<link rel="stylesheet" href="css/main.css?ver=1.1" />
-	<link rel="stylesheet" href="css/media.css?ver=1.1" />
+	<link rel="stylesheet" href="css/main.css?ver=1.2" />
+	<link rel="stylesheet" href="css/media.css?ver=1.2" />
 </head>
 <body>
 
@@ -58,6 +58,7 @@
 						<ul>
 							<li><a href="#">Молочное производство</a></li>
 							<li><a href="#">Сыроварня</a></li>
+							<li><a href="#">Напитки</a></li>
 						</ul>
 					</li>
 					<li class="has_child">
@@ -73,7 +74,9 @@
 							<li><a href="#"> Глазированные сырки</a></li>
 							<li><a href="#">Десерты</a></li>
 							<li><a href="#">Сыры твердые</a></li>
-							<li><a href="#"> Сыры плавленые</a></li>
+							<li><a href="#">Сыры плавленые</a></li>
+							<li><a href="#">Холодный чай</a></li>
+							<li><a href="#">Вода</a></li>
 						</ul>
 					</li>
 					<li><a href="#">Блог</a></li>
@@ -103,32 +106,32 @@
 				<div class="tab-container-video">
 					<div class="tab-pane-video" id="tab_video1">
 						<img src="img/bg_video.jpg" alt="alt">
-						<video width="100%" height="auto" preload="auto" autoplay="autoplay" poster="" autoplay muted>
-							<source src="img/1985188.mp4" type="video/mp4"></source> 
+						<video width="100%" data-keepplaying height="auto" preload="auto" autoplay="autoplay" poster="" autoplay muted>
+							<source src="img/video1.mp4" type="video/mp4"></source> 
 						</video>
 					</div>
 					<div class="tab-pane-video" id="tab_video2">
 						<img src="img/bg_video.jpg" alt="alt">
-						<video width="100%" height="auto" preload="auto" autoplay="autoplay" poster="" autoplay muted>
-							<source src="img/1985188.mp4" type="video/mp4"></source> 
+						<video width="100%" data-keepplaying height="auto" preload="auto" autoplay="autoplay" poster="" autoplay muted>
+							<source src="img/video1.mp4" type="video/mp4"></source> 
 						</video>
 					</div>
 					<div class="tab-pane-video" id="tab_video3">
 						<img src="img/bg_video.jpg" alt="alt">
-						<video width="100%" height="auto" preload="auto" autoplay="autoplay" poster="" autoplay muted>
-							<source src="img/1985188.mp4" type="video/mp4"></source> 
+						<video width="100%" data-keepplaying height="auto" preload="auto" autoplay="autoplay" poster="" autoplay muted>
+							<source src="img/video1.mp4" type="video/mp4"></source> 
 						</video>
 					</div>
 					<div class="tab-pane-video" id="tab_video4">
 						<img src="img/bg_video.jpg" alt="alt">
-						<video width="100%" height="auto" preload="auto" autoplay="autoplay" poster="" autoplay muted>
-							<source src="img/1985188.mp4" type="video/mp4"></source> 
+						<video width="100%" data-keepplaying height="auto" preload="auto" autoplay="autoplay" poster="" autoplay muted>
+							<source src="img/video1.mp4" type="video/mp4"></source> 
 						</video>
 					</div>
 					<div class="tab-pane-video" id="tab_video5">
 						<img src="img/bg_video.jpg" alt="alt">
-						<video width="100%" height="auto" preload="auto" autoplay="autoplay" poster="" autoplay muted>
-							<source src="img/1985188.mp4" type="video/mp4"></source> 
+						<video width="100%" data-keepplaying height="auto" preload="auto" autoplay="autoplay" poster="" autoplay muted>
+							<source src="img/video1.mp4" type="video/mp4"></source> 
 						</video>
 					</div>
 				</div>				
@@ -145,7 +148,7 @@
 											<img src="img/category1.jpg" alt="alt">
 										</a>
 										<div class="item-category__content">
-											<div class="item-category__title">О Нас</div>
+											<a href="#" class="item-category__title">О Нас</a>
 										</div>
 									</div>
 								</div>
@@ -155,7 +158,7 @@
 											<img src="img/category2.jpg" alt="alt">
 										</a>
 										<div class="item-category__content">
-											<div class="item-category__title">Молочное производство</div>
+											<a href="#" class="item-category__title">Молочное производство</a>
 										</div>
 									</div>
 									<div class="item-category">
@@ -163,7 +166,7 @@
 											<img src="img/category3.jpg" alt="alt">
 										</a>
 										<div class="item-category__content">
-											<div class="item-category__title">Сыроварня</div>
+											<a href="#" class="item-category__title">Сыроварня</a>
 										</div>
 									</div>
 								</div>
@@ -173,7 +176,7 @@
 											<img src="img/category4.jpg" alt="alt">
 										</a>
 										<div class="item-category__content">
-											<div class="item-category__title">Наша продукция</div>
+											<a href="#" class="item-category__title">Наша продукция</a>
 											<ul>
 												<li><a href="#">Молоко</a></li>
 												<li><a href="#">Кефир</a></li>
@@ -300,7 +303,7 @@
 <script src="libs/fullPage.js-master/vendors/scrolloverflow.min.js"></script>
 <script src="libs/fullPage.js-master/jquery.fullPage.js"></script>
 <script src="libs/jQueryFormStyler-master/jquery.formstyler.min.js"></script>
-<script src="js/common.js?ver=1.1"></script>
+<script src="js/common.js?ver=1.2"></script>
 <!-- Yandex.Metrika counter --><!-- /Yandex.Metrika counter -->
 <!-- Google Analytics counter --><!-- /Google Analytics counter -->
 </body>
