--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 	<link rel="stylesheet" href="libs/slick-1.5.9/slick/slick.css" />
 	<link rel="stylesheet" href="libs/slick-1.5.9/slick/slick-theme.css" />
 	<link rel="stylesheet" href="css/fonts.css" />
-	<link rel="stylesheet" href="css/main.css?ver=1.2" />
-	<link rel="stylesheet" href="css/media.css?ver=1.2" />
+	<link rel="stylesheet" href="css/main.css?ver=1.3" />
+	<link rel="stylesheet" href="css/media.css?ver=1.3" />
 </head>
 <body>
 
@@ -104,7 +104,7 @@
 					<li><a href="#tab_video5">На Вашем столе</a></li>
 				</ul>
 				<div class="tab-container-video">
-					<div class="tab-pane-video" id="tab_video1">
+					<div class="tab-pane-video active" id="tab_video1">
 						<img src="img/bg_video.jpg" alt="alt">
 						<video width="100%" data-keepplaying height="auto" preload="auto" autoplay="autoplay" poster="" autoplay muted>
 							<source src="img/video1.mp4" type="video/mp4"></source> 
@@ -303,7 +303,7 @@
 <script src="libs/fullPage.js-master/vendors/scrolloverflow.min.js"></script>
 <script src="libs/fullPage.js-master/jquery.fullPage.js"></script>
 <script src="libs/jQueryFormStyler-master/jquery.formstyler.min.js"></script>
-<script src="js/common.js?ver=1.2"></script>
+<script src="js/common.js?ver=1.3"></script>
 <!-- Yandex.Metrika counter --><!-- /Yandex.Metrika counter -->
 <!-- Google Analytics counter --><!-- /Google Analytics counter -->
 </body>
