--- a/catalog.html
+++ b/catalog.html
@@ -26,7 +26,7 @@
 <body>
 
 	<div class="wrapper">
- 
+
 		<div class="sidebar">
 			<div class="sidebar__top">
 				<a href="tel:+79789416809" class="phone-mob"><i class="fas fa-phone-alt"></i></a>
@@ -93,109 +93,178 @@
 			</div>
 		</div>
 
-		<div id="fullpage">
+		<div class="fullpage-wrapper">
 			
-			<section class="section">
-				<ul class="tabs-video">
-					<li class="active"><a href="#tab_video1">Фермы</a></li>
-					<li><a href="#tab_video2">Транспортировка молока</a></li>
-					<li><a href="#tab_video3">Производство на заводе</a></li>
-					<li><a href="#tab_video4">На полках магазинов</a></li>
-					<li><a href="#tab_video5">На Вашем столе</a></li>
-				</ul>
-				<div class="tab-container-video">
-					<div class="tab-pane-video active" id="tab_video1">
-						<img src="img/bg_video.jpg" alt="alt">
-						<video width="100%" data-keepplaying height="auto" preload="auto" autoplay="autoplay" poster="" autoplay muted>
-							<source src="img/video1.mp4" type="video/mp4"></source> 
-						</video>
+			<section class="catalog">
+				<div class="container">
+					<div class="title-section"><span>каталог</span></div>
+					<ul class="tags-catalog">
+						<li class="active"><a href="#">Все</a></li>
+						<li><a href="#">Молоко</a></li>
+						<li><a href="#">Кефир</a></li>
+						<li><a href="#">Биойогурт</a></li>
+						<li><a href="#">Бифилайф</a></li>
+						<li><a href="#">Сметана</a></li>
+						<li><a href="#">Масло</a></li>
+						<li><a href="#">Сыры</a></li>
+						<li><a href="#">Ряженка</a></li>
+						<li><a href="#">Творог</a></li>
+						<li><a href="#">Глазированные сырки</a></li>
+						<li><a href="#">Десерты</a></li>
+						<li><a href="#">Сыры плавленые</a></li>
+						<li><a href="#">Сыры твердые</a></li>
+						<li><a href="#">Холодный чай</a></li>
+						<li><a href="#">Вода</a></li>
+					</ul>
+					<div class="sortings-wrap">
+						<select>
+							<option value="1">Объем, л</option>
+							<option value="1">Объем, л</option>
+							<option value="1">Объем, л</option>
+							<option value="1">Объем, л</option>
+						</select>
+						<select>
+							<option value="1">Жирность,%</option>
+							<option value="1">Жирность,%</option>
+							<option value="1">Жирность,%</option>
+							<option value="1">Жирность,%</option>
+						</select>
 					</div>
-					<div class="tab-pane-video" id="tab_video2">
-						<img src="img/bg_video.jpg" alt="alt">
-						<video width="100%" data-keepplaying height="auto" preload="auto" autoplay="autoplay" poster="" autoplay muted>
-							<source src="img/video1.mp4" type="video/mp4"></source> 
-						</video>
+					<div class="row row_catalog">
+						<div class="col-xl-3 col-lg-4 col-sm-6">
+							<div class="item-catalog">
+								<a href="#" class="item-catalog__link"></a>
+								<div class="item-catalog__image">
+									<img src="img/catalog1.jpg" alt="alt">
+								</div>
+								<div class="item-catalog__title">"Молоко 2,5 %</div>
+								<div class="item-catalog__descr">Пастеризованное молоко <br>900 г</div>
+							</div>
+						</div>
+						<div class="col-xl-3 col-lg-4 col-sm-6">
+							<div class="item-catalog">
+								<a href="#" class="item-catalog__link"></a>
+								<div class="item-catalog__image">
+									<img src="img/catalog2.jpg" alt="alt">
+								</div>
+								<div class="item-catalog__title">"Молоко 3,5 %</div>
+								<div class="item-catalog__descr">Пастеризованное молоко <br>900 г</div>
+							</div>
+						</div>
+						<div class="col-xl-3 col-lg-4 col-sm-6">
+							<div class="item-catalog">
+								<a href="#" class="item-catalog__link"></a>
+								<div class="item-catalog__image">
+									<img src="img/catalog3.jpg" alt="alt">
+								</div>
+								<div class="item-catalog__title">"Кефир 1,5 %</div>
+								<div class="item-catalog__descr">900 г</div>
+							</div>
+						</div>
+						<div class="col-xl-3 col-lg-4 col-sm-6">
+							<div class="item-catalog">
+								<a href="#" class="item-catalog__link"></a>
+								<div class="item-catalog__image">
+									<img src="img/catalog4.jpg" alt="alt">
+								</div>
+								<div class="item-catalog__title">"Биойогурт 1,5 %</div>
+								<div class="item-catalog__descr">с фруктово-ягодным наполнителем «Клубника» <br>450 г</div>
+							</div>
+						</div>
+						<div class="col-xl-3 col-lg-4 col-sm-6">
+							<div class="item-catalog">
+								<a href="#" class="item-catalog__link"></a>
+								<div class="item-catalog__image">
+									<img src="img/catalog2.jpg" alt="alt">
+								</div>
+								<div class="item-catalog__title">"Молоко 3,5 %</div>
+								<div class="item-catalog__descr">Пастеризованное молоко <br>900 г</div>
+							</div>
+						</div>
+						<div class="col-xl-3 col-lg-4 col-sm-6">
+							<div class="item-catalog">
+								<a href="#" class="item-catalog__link"></a>
+								<div class="item-catalog__image">
+									<img src="img/catalog4.jpg" alt="alt">
+								</div>
+								<div class="item-catalog__title">"Биойогурт 1,5 %</div>
+								<div class="item-catalog__descr">с фруктово-ягодным наполнителем «Клубника» <br>450 г</div>
+							</div>
+						</div>
+						<div class="col-xl-3 col-lg-4 col-sm-6">
+							<div class="item-catalog">
+								<a href="#" class="item-catalog__link"></a>
+								<div class="item-catalog__image">
+									<img src="img/catalog1.jpg" alt="alt">
+								</div>
+								<div class="item-catalog__title">"Молоко 2,5 %</div>
+								<div class="item-catalog__descr">Пастеризованное молоко <br>900 г</div>
+							</div>
+						</div>
+						<div class="col-xl-3 col-lg-4 col-sm-6">
+							<div class="item-catalog">
+								<a href="#" class="item-catalog__link"></a>
+								<div class="item-catalog__image">
+									<img src="img/catalog3.jpg" alt="alt">
+								</div>
+								<div class="item-catalog__title">"Кефир 1,5 %</div>
+								<div class="item-catalog__descr">900 г</div>
+							</div>
+						</div>
+						<div class="col-xl-3 col-lg-4 col-sm-6">
+							<div class="item-catalog">
+								<a href="#" class="item-catalog__link"></a>
+								<div class="item-catalog__image">
+									<img src="img/catalog1.jpg" alt="alt">
+								</div>
+								<div class="item-catalog__title">"Молоко 2,5 %</div>
+								<div class="item-catalog__descr">Пастеризованное молоко <br>900 г</div>
+							</div>
+						</div>
+						<div class="col-xl-3 col-lg-4 col-sm-6">
+							<div class="item-catalog">
+								<a href="#" class="item-catalog__link"></a>
+								<div class="item-catalog__image">
+									<img src="img/catalog2.jpg" alt="alt">
+								</div>
+								<div class="item-catalog__title">"Молоко 3,5 %</div>
+								<div class="item-catalog__descr">Пастеризованное молоко <br>900 г</div>
+							</div>
+						</div>
+						<div class="col-xl-3 col-lg-4 col-sm-6">
+							<div class="item-catalog">
+								<a href="#" class="item-catalog__link"></a>
+								<div class="item-catalog__image">
+									<img src="img/catalog3.jpg" alt="alt">
+								</div>
+								<div class="item-catalog__title">"Кефир 1,5 %</div>
+								<div class="item-catalog__descr">900 г</div>
+							</div>
+						</div>
+						<div class="col-xl-3 col-lg-4 col-sm-6">
+							<div class="item-catalog">
+								<a href="#" class="item-catalog__link"></a>
+								<div class="item-catalog__image">
+									<img src="img/catalog4.jpg" alt="alt">
+								</div>
+								<div class="item-catalog__title">"Биойогурт 1,5 %</div>
+								<div class="item-catalog__descr">с фруктово-ягодным наполнителем «Клубника» <br>450 г</div>
+							</div>
+						</div>
 					</div>
-					<div class="tab-pane-video" id="tab_video3">
-						<img src="img/bg_video.jpg" alt="alt">
-						<video width="100%" data-keepplaying height="auto" preload="auto" autoplay="autoplay" poster="" autoplay muted>
-							<source src="img/video1.mp4" type="video/mp4"></source> 
-						</video>
+					<div class="pager">
+						<a class="prev page-numbers disabled" href="#"><i class="fas fa-chevron-left"></i></a>
+						<span aria-current="page" class="page-numbers current" href="#">1</span>
+						<a class="page-numbers" href="#">2</a>
+						<a class="page-numbers" href="#">3</a>
+						<a class="next page-numbers" href="#"><i class="fas fa-chevron-right"></i></a>
 					</div>
-					<div class="tab-pane-video" id="tab_video4">
-						<img src="img/bg_video.jpg" alt="alt">
-						<video width="100%" data-keepplaying height="auto" preload="auto" autoplay="autoplay" poster="" autoplay muted>
-							<source src="img/video1.mp4" type="video/mp4"></source> 
-						</video>
-					</div>
-					<div class="tab-pane-video" id="tab_video5">
-						<img src="img/bg_video.jpg" alt="alt">
-						<video width="100%" data-keepplaying height="auto" preload="auto" autoplay="autoplay" poster="" autoplay muted>
-							<source src="img/video1.mp4" type="video/mp4"></source> 
-						</video>
-					</div>
-				</div>				
+				</div>
 			</section>
 
 			<section class="section">
 				<div class="wrap-sections">
-					<div class="categories">
-						<div class="container">
-							<div class="row row_categories">
-								<div class="col-lg-3">
-									<div class="item-category">
-										<a href="#" class="item-category__image">
-											<img src="img/category1.jpg" alt="alt">
-										</a>
-										<div class="item-category__content">
-											<a href="#" class="item-category__title">О Нас</a>
-										</div>
-									</div>
-								</div>
-								<div class="col-lg-4">
-									<div class="item-category">
-										<a href="#" class="item-category__image">
-											<img src="img/category2.jpg" alt="alt">
-										</a>
-										<div class="item-category__content">
-											<a href="#" class="item-category__title">Молочное производство</a>
-										</div>
-									</div>
-									<div class="item-category">
-										<a href="#" class="item-category__image">
-											<img src="img/category3.jpg" alt="alt">
-										</a>
-										<div class="item-category__content">
-											<a href="#" class="item-category__title">Сыроварня</a>
-										</div>
-									</div>
-								</div>
-								<div class="col-lg-5">
-									<div class="item-category">
-										<a href="#" class="item-category__image">
-											<img src="img/category4.jpg" alt="alt">
-										</a>
-										<div class="item-category__content">
-											<a href="#" class="item-category__title">Наша продукция</a>
-											<ul>
-												<li><a href="#">Молоко</a></li>
-												<li><a href="#">Кефир</a></li>
-												<li><a href="#">Сметана</a></li>
-												<li><a href="#">Творог</a></li>
-												<li><a href="#">Масло</a></li>
-												<li><a href="#">Ряженка</a></li>
-												<li><a href="#">Бифилайф</a></li>
-												<li><a href="#">Глазированные сырки</a></li>
-												<li><a href="#">Десерты</a></li>
-												<li><a href="#">Сыры твердые</a></li>
-												<li><a href="#">Сыры плавленые</a></li>
-											</ul>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
+					
 					<footer class="footer">
 						<div class="container">
 							<div class="row row_footer">
