--- a/dairy.html
+++ b/dairy.html
@@ -26,7 +26,7 @@
 <body>
 
 	<div class="wrapper">
- 
+
 		<div class="sidebar">
 			<div class="sidebar__top">
 				<a href="tel:+79789416809" class="phone-mob"><i class="fas fa-phone-alt"></i></a>
@@ -58,7 +58,6 @@
 						<ul>
 							<li><a href="#">Молочное производство</a></li>
 							<li><a href="#">Сыроварня</a></li>
-							<li><a href="#">Напитки</a></li>
 						</ul>
 					</li>
 					<li class="has_child">
@@ -74,9 +73,7 @@
 							<li><a href="#"> Глазированные сырки</a></li>
 							<li><a href="#">Десерты</a></li>
 							<li><a href="#">Сыры твердые</a></li>
-							<li><a href="#">Сыры плавленые</a></li>
-							<li><a href="#">Холодный чай</a></li>
-							<li><a href="#">Вода</a></li>
+							<li><a href="#"> Сыры плавленые</a></li>
 						</ul>
 					</li>
 					<li><a href="#">Блог</a></li>
@@ -93,109 +90,107 @@
 			</div>
 		</div>
 
-		<div id="fullpage">
+		<div class="fullpage-wrapper">
 			
-			<section class="section">
-				<ul class="tabs-video">
-					<li class="active"><a href="#tab_video1">Фермы</a></li>
-					<li><a href="#tab_video2">Транспортировка молока</a></li>
-					<li><a href="#tab_video3">Производство на заводе</a></li>
-					<li><a href="#tab_video4">На полках магазинов</a></li>
-					<li><a href="#tab_video5">На Вашем столе</a></li>
-				</ul>
-				<div class="tab-container-video">
-					<div class="tab-pane-video active" id="tab_video1">
-						<img src="img/bg_video.jpg" alt="alt">
-						<video width="100%" data-keepplaying height="auto" preload="auto" autoplay="autoplay" poster="" autoplay muted>
-							<source src="img/video1.mp4" type="video/mp4"></source> 
-						</video>
-					</div>
-					<div class="tab-pane-video" id="tab_video2">
-						<img src="img/bg_video.jpg" alt="alt">
-						<video width="100%" data-keepplaying height="auto" preload="auto" autoplay="autoplay" poster="" autoplay muted>
-							<source src="img/video1.mp4" type="video/mp4"></source> 
-						</video>
-					</div>
-					<div class="tab-pane-video" id="tab_video3">
-						<img src="img/bg_video.jpg" alt="alt">
-						<video width="100%" data-keepplaying height="auto" preload="auto" autoplay="autoplay" poster="" autoplay muted>
-							<source src="img/video1.mp4" type="video/mp4"></source> 
-						</video>
-					</div>
-					<div class="tab-pane-video" id="tab_video4">
-						<img src="img/bg_video.jpg" alt="alt">
-						<video width="100%" data-keepplaying height="auto" preload="auto" autoplay="autoplay" poster="" autoplay muted>
-							<source src="img/video1.mp4" type="video/mp4"></source> 
-						</video>
-					</div>
-					<div class="tab-pane-video" id="tab_video5">
-						<img src="img/bg_video.jpg" alt="alt">
-						<video width="100%" data-keepplaying height="auto" preload="auto" autoplay="autoplay" poster="" autoplay muted>
-							<source src="img/video1.mp4" type="video/mp4"></source> 
-						</video>
-					</div>
-				</div>				
-			</section>
-
-			<section class="section">
-				<div class="wrap-sections">
-					<div class="categories">
-						<div class="container">
-							<div class="row row_categories">
-								<div class="col-lg-3">
-									<div class="item-category">
-										<a href="#" class="item-category__image">
-											<img src="img/category1.jpg" alt="alt">
-										</a>
-										<div class="item-category__content">
-											<a href="#" class="item-category__title">О Нас</a>
-										</div>
+			<section class="dairy">
+				<div class="container">
+					<div class="title-section"><span>Сыроварня</span></div>
+					<div class="descr-section">Приветствуем ценителей крафтового сыра в Крыму и приглашаем Вас окунуться в увлекательную культуру сыроварения.</div>
+					<div class="dairies-wrap">
+						<div class="item-dairy">
+							<div class="row">
+								<div class="col-md-6">
+									<div class="item-dairy__text">
+										<div class="item-dairy__number">01</div>
+										<p> Процесс приготовления сыра начинается с подготовки инструментов и форм – дезинфекция перед каждой варкой сыра это залог чистоты полезных сырных бактерий.</p>
 									</div>
 								</div>
-								<div class="col-lg-4">
-									<div class="item-category">
-										<a href="#" class="item-category__image">
-											<img src="img/category2.jpg" alt="alt">
-										</a>
-										<div class="item-category__content">
-											<a href="#" class="item-category__title">Молочное производство</a>
-										</div>
-									</div>
-									<div class="item-category">
-										<a href="#" class="item-category__image">
-											<img src="img/category3.jpg" alt="alt">
-										</a>
-										<div class="item-category__content">
-											<a href="#" class="item-category__title">Сыроварня</a>
-										</div>
-									</div>
-								</div>
-								<div class="col-lg-5">
-									<div class="item-category">
-										<a href="#" class="item-category__image">
-											<img src="img/category4.jpg" alt="alt">
-										</a>
-										<div class="item-category__content">
-											<a href="#" class="item-category__title">Наша продукция</a>
-											<ul>
-												<li><a href="#">Молоко</a></li>
-												<li><a href="#">Кефир</a></li>
-												<li><a href="#">Сметана</a></li>
-												<li><a href="#">Творог</a></li>
-												<li><a href="#">Масло</a></li>
-												<li><a href="#">Ряженка</a></li>
-												<li><a href="#">Бифилайф</a></li>
-												<li><a href="#">Глазированные сырки</a></li>
-												<li><a href="#">Десерты</a></li>
-												<li><a href="#">Сыры твердые</a></li>
-												<li><a href="#">Сыры плавленые</a></li>
-											</ul>
-										</div>
+								<div class="col-md-6">
+									<div class="item-dairy__image">
+										<img src="img/dairy1.png" alt="alt">
 									</div>
 								</div>
 							</div>
 						</div>
+						<div class="item-dairy">
+							<div class="row">
+								<div class="col-md-6">
+									<div class="item-dairy__text">
+										<div class="item-dairy__number">02</div>
+										<p>Далее подготавливаем сырье - бережно пастеризауем молока при температуре 650 С и вносим культуру сырных бактерий для созревания изумительно вкусного сыра. </p>
+										<p>После загустевания молока начинается нарезка сырного зерна вручную с помощью инструментов - только так можно регулировать размер зерна, который повлияет потом, в процессе созревания, на структуру и качество сыра.</p>
+									</div>
+								</div>
+								<div class="col-md-6">
+									<div class="item-dairy__image">
+										<img src="img/dairy2.png" alt="alt">
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="item-dairy">
+							<div class="row">
+								<div class="col-md-6">
+									<div class="item-dairy__text">
+										<div class="item-dairy__number">03</div>
+										<p>Вымешивание и обсушка разрезанного сырного зерна производится только вручную, чтобы не разрушать сырные зерна. Температура сырного зерна и сыворотки более 500 С. Готовым зерном наполняем формы для сыра.</p>
+									</div>
+								</div>
+								<div class="col-md-6">
+									<div class="item-dairy__image">
+										<img src="img/dairy3.png" alt="alt">
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="item-dairy">
+							<div class="row">
+								<div class="col-md-6">
+									<div class="item-dairy__text">
+										<div class="item-dairy__number">04</div>
+										<p> Формы с сыром устанавливаются под прес на несколько часов, после чего сформированные головы сыра опускаются в рассол на 2 суток для посолки.</p>
+									</div>
+									<div class="descr-italic">Казалось бы сыр готов, НО!...</div>
+								</div>
+								<div class="col-md-6">
+									<div class="item-dairy__image">
+										<img src="img/dairy4.png" alt="alt">
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="item-dairy">
+							<div class="row">
+								<div class="col-md-6">
+									<div class="item-dairy__text">
+										<div class="item-dairy__number">05</div>
+										<p>Далее начинаются таинственные природные процессы, неподвластные человку, - работа сырных культур бактерий, сопровождаемая терпением и кропотливой работой сыровара. Чтобы процессы в сыре проходили равномерно, головы сыра в хранилище переворачиваются не мнее 2х раз в день на протяжении 6 и более месяцев в зависимости от сорта сыра - это и есть выдержка.</p>
+									</div>
+								</div>
+								<div class="col-md-6">
+									<iframe width="560" height="315" src="https://www.youtube.com/embed/U6CdbM73yJY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+									<div class="descr-section">Посмотреть на процесс приготовления сыра можно своими глазами с помощью онлайн-камеры, установленной у нас в цеху</div>
+								</div>
+							</div>
+						</div>
 					</div>
+				</div>
+			</section>
+
+			<div class="presentation">
+				<div class="container">
+					<div class="title-big">Приглашаем Вас насладиться <strong>неповторимыми вкусами сыров</strong> ТМ «Долина легенд»</div>
+					<div class="descr-big">
+						<p>изготовленных по авторским рецептам с любовью и выдержкой нашего сыровара Дениса Кожевникова.  </p>
+						<p>Ознакомиться с готовой продукцией можно в нашем каталоге.</p>
+					</div>
+					<a href="#" class="btn-main">Смотреть продукцию</a>
+				</div>
+			</div>
+
+			<section class="section">
+				<div class="wrap-sections">
+					
 					<footer class="footer">
 						<div class="container">
 							<div class="row row_footer">
