--- a/map.html
+++ b/map.html
@@ -27,6 +27,8 @@
 				<li><a href="card-authorized.html" target="_blanck">card-authorized</a></li>
 				<li><a href="news.html" target="_blanck">news</a></li>
 				<li><a href="buy.html" target="_blanck">buy</a></li> 
+				<li><a href="production.html" target="_blanck">production</a></li> 
+				<li><a href="article.html" target="_blanck">article</a></li> 
 			</ul>  
 		</div>  
 	</div> 
