--- a/map.html
+++ b/map.html
@@ -29,6 +29,7 @@
 				<li><a href="buy.html" target="_blanck">buy</a></li> 
 				<li><a href="production.html" target="_blanck">production</a></li> 
 				<li><a href="article.html" target="_blanck">article</a></li> 
+				<li><a href="personal.html" target="_blanck">personal</a></li> 
 			</ul>  
 		</div>  
 	</div> 
